--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Riview</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#menuproduk">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimoni">Riview</a></li>
                 </ul><a class="btn btn-primary ms-md-2" role="button" href="#" style="background: var(--bs-dark-border-subtle);">Contact Us</a>
             </div>
         </div>
@@ -133,7 +133,7 @@
     <section class="photo-gallery py-4 py-xl-5">
         <div class="container">
             <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <div class="col-md-8 col-xl-6 text-center mx-auto" id="menuproduk">
                     <h2>Menu Produk</h2>
                     <p class="w-lg-50">Temukan koleksi baju perempuan dengan desain trendi, bahan berkualitas, dan kenyamanan maksimal. Dari kasual hingga formal, tersedia berbagai pilihan model yang stylish dan mudah dipadukan untuk setiap kesempatan!</p>
                 </div>
@@ -150,8 +150,8 @@
     </section>
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
-            <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2>Testimonials</h2>
+            <div class="col-md-8 col-xl-6 text-center mx-auto" id="testimoni">
+                <h2>Testimoni</h2>
             </div>
         </div>
         <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-lg-3">
